--- a/resonsibilities.html
+++ b/resonsibilities.html
@@ -54,7 +54,7 @@
         </nav>
     </div>
 
-    <div class="body1">
+    <div class="body2">
 
         <div class="jumbotron jumbotron-fluid">
             <div class="container grid">
@@ -108,13 +108,8 @@
             </div>
             <div class="card-body">
               <blockquote class="blockquote mb-0">
-                <p><h6 class="font-weight-normal">Our user research commenced the project. I planned and
-                    conducted
-                    the user interviews, created the user
-                    scenario and storyboarded the user path. We interviewed artist, community
-                    members
-                    and a stakeholder to
-                    discover what route to take to encompass all aspects of the non-profit's growth.</p>
+                <p><h6 class="font-weight-normal">During our definition phase, I took the lead on the competitor analysis and heuristics evaluation which aided me in discovering our key insights, problem statement and value proposition. These findings were key to measuring our progress and successfulness in our process. 
+                </p>
                 <!-- <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
               </blockquote> -->
             </h6> 
@@ -128,13 +123,9 @@
             </div>
             <div class="card-body">
               <blockquote class="blockquote mb-0">
-                <p><h6 class="font-weight-normal">Our user research commenced the project. I planned and
-                    conducted
-                    the user interviews, created the user
-                    scenario and storyboarded the user path. We interviewed artist, community
-                    members
-                    and a stakeholder to
-                    discover what route to take to encompass all aspects of the non-profit's growth.</p>
+                <p><h6 class="font-weight-normal">I was heavily involved throughout all of the prototyping process. I focused on A/B testing plans, the clickable aspects of XD, and the homepage. My main contributions in our final stages were iterating the changes from our mid to high-fidelity wireframes. 
+
+                </p>
                 <!-- <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
               </blockquote> -->
             </h6> 
