--- a/process.html
+++ b/process.html
@@ -25,7 +25,7 @@
                 <span class="font-weight-light">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item active text-color">
-                            <a class="nav-link text-color" href="#">Portfolio Home <span
+                            <a class="nav-link text-color" href="https://celestab.github.io/UX_UI_HW_20/">Portfolio Home <span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-link text-color">
