--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <div class="pos-f-t">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-color p-4">
-        <h5 class="text-color h4">Northeast Minneapolis Arts Association - Case Study </h5>
+        <h2 class="text-color h4">Celesta Brainard</h2>
         <span class="font-weight-light">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active text-color">
               <a class="nav-link text-color" href="https://celestab.github.io/UX_UI_HW_20/">Portfolio Home <span class="sr-only">(current)</span></a>
             </li>
+            <h5 class="text-color h5">Northeast Minneapolis Arts Association - Case Study </h5>
             <li class="nav-link text-color">
               <a class="nav-link text-color" href="index.html">Case Study Home</a>
             </li>
