--- a/process.html
+++ b/process.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link href="css/style.css" type="text/css" rel="stylesheet">
 
 <meta charset="UTF-8">
@@ -18,113 +18,180 @@
 
 <body>
 
-    <div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-color p-4">
-                <h5 class="text-color h4">Northeast Minneapolis Arts Association - Case Study </h5>
-                <span class="font-weight-light">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item active text-color">
-                            <a class="nav-link text-color" href="https://celestab.github.io/UX_UI_HW_20/">Portfolio Home <span
-                                    class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-link text-color">
-                            <a class="nav-link text-color" href="index.html">Case Study Home</a>
-                        </li>
-                        <li class="nav-link text-color">
-                            <a class="nav-link text-color" href="process.html">Process</a>
-                        </li>
-                        <li class="nav-link text-color">
-                            <a class="nav-link text-color" href="resonsibilities.html">Responsibilities</a>
-                        </li>
-                    </ul>
-                </span>
-            </div>
+  <div class="pos-f-t">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-color p-4">
+        <h5 class="text-color h4">Northeast Minneapolis Arts Association - Case Study </h5>
+        <span class="font-weight-light">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active text-color">
+              <a class="nav-link text-color" href="https://celestab.github.io/UX_UI_HW_20/">Portfolio Home <span
+                  class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-link text-color">
+              <a class="nav-link text-color" href="index.html">Case Study Home</a>
+            </li>
+            <li class="nav-link text-color">
+              <a class="nav-link text-color" href="process.html">Process</a>
+            </li>
+            <li class="nav-link text-color">
+              <a class="nav-link text-color" href="resonsibilities.html">Responsibilities</a>
+            </li>
+          </ul>
+        </span>
+      </div>
+    </div>
+    <nav class="navbar navbar-dark ">
+      <h1 class="font-weight-bold"> Celesta Brainard</h1>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
+        aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </nav>
+  </div>
+
+  <div class="body2">
+
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container grid">
+        <img src="images/logo.png" width="320" height="320">
+        <div class="textRight">
+          <h1 class="display-4">Northeast Minneapolis Arts Association</h1>
+          <p class="lead"> Case Study - the redesign of Northeast Minneapolis Art Association’s webpage</p>
         </div>
-        <nav class="navbar navbar-dark ">
-            <h1 class="font-weight-bold"> Celesta Brainard</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </nav>
+      </div>
     </div>
 
-    <div class="body2">
+    <div class="textBody">
+      <h4>The Problem</h4>
+      <p>During our research and interviews we discovered that artists need resources that NEMAA has to offer but don’t
+        fully understand NEMAA’s purpose and goal.</p>
 
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container grid">
-                <img src="images/logo.png" width="320" height="320">
-                <div class="textRight">
-                    <h1 class="display-4">Northeast Minneapolis Arts Association</h1>
-                    <p class="lead"> Case Study - the redesign of Northeast Minneapolis Art Association’s webpage</p>
-                </div>
-            </div>
+    </div>
+
+    <div class="textBody">
+      <h4>The Solution</h4>
+      <p>We believe redesigning NEMAA’s webpage for our community, artists, and stakeholders will achieve growth in
+        NEMAA memberships and an overall increase in traffic to the Northeast Minneapolis arts scene.</p>
+
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="images/user.png" width="320" height="320" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/def.png" width="320" height="320" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="images/proto.png" width="320" height="320" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+  </div>
+
+  <div class="background">
+    <div class="textBody">
+      <p>We took a pretty traditional approach and kicked off the project with our user research. We worked through user research which lead us to the definition phase, 
+        and finished with creating the prototype. 
+        I planned and conducted the user interviews, created the user
+        scenario and storyboarded the user path. We interviewed artist, community members and a stakeholder to
+        discover what route to take to encompass all aspects of the non-profit's growth.
+      </p>
+    </div>
+
+    <div class="grid2">
+      <div class="card user card1">
+        <div class="card-header font-weight-bold">
+          User Research
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>
+            <h6 class="font-weight-normal">Our user research commenced the project. I planned and
+              conducted
+              the user interviews, created the user
+              scenario and storyboarded the user path. We interviewed artist, community
+              members
+              and a stakeholder to
+              discover what route to take to encompass all aspects of the non-profit's growth.</p>
+              <!-- <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+              </blockquote> -->
+            </h6>
         </div>
 
-        <div class="textBody">
-            <h4>The Problem</h4>
-            <p>During our research and interviews we discovered that artists need resources that NEMAA has to offer but don’t fully understand NEMAA’s purpose and goal.</p>
-      
-          </div>
+      </div>
 
-          <div class="textBody">
-            <h4>The Solution</h4>
-            <p>We believe redesigning NEMAA’s webpage for our community, artists, and stakeholders will achieve growth in NEMAA memberships and an overall increase in traffic to the Northeast Minneapolis arts scene.</p>
-      
-          </div>
+      <div class="card define card1">
+        <div class="card-header font-weight-bold">
+          Definition
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>
+            <h6 class="font-weight-normal">During our definition phase, I took the lead on the competitor analysis and
+              heuristics evaluation which aided me in discovering our key insights, problem statement and value
+              proposition. These findings were key to measuring our progress and successfulness in our process.
+              </p>
+              <!-- <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+              </blockquote> -->
+            </h6>
+        </div>
 
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/user.png" width="320" height="320" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/def.png" width="320" height="320" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/proto.png" width="320" height="320" alt="Third slide">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+      </div>
+
+      <div class="proto card card1">
+        <div class="card-header font-weight-bold">
+          Prototyping
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>
+            <h6 class="font-weight-normal">I was heavily involved throughout all of the prototyping process. I focused
+              on A/B testing plans, the clickable aspects of XD, and the homepage. My main contributions in our final
+              stages were iterating the changes from our mid to high-fidelity wireframes.
+
+              </p>
+              <!-- <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+              </blockquote> -->
+            </h6>
+        </div>
 
 
 
 
+      </div>
 
 
 
 
-
-
-
-
-
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
 
 
 </body>
